<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">hive</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_next">Next</string>
  <string name="lbl_user_name">User Name</string>
  <string name="msg_where_would_you">Where would you like to go?</string>
  <string name="lbl_no_taxi_here">No taxi here!</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_signup">Signup</string>
  <string name="msg_thu_august_20">Thu, August 20, 2020</string>
  <string name="msg_already_have_ac">Already have account?</string>
  <string name="msg_the_university">The University of Jordan</string>
  <string name="msg_enter_your_pass">Enter your password</string>
  <string name="lbl_oct_06_2020">Oct 06, 2020</string>
  <string name="lbl_7_80_usd">7.80 USD</string>
  <string name="lbl_cardholder_name">Cardholder Name</string>
  <string name="lbl_work">Work</string>
  <string name="lbl_oct_07_2020">Oct 07, 2020</string>
  <string name="msg_edit_your_pictu">Edit your picture</string>
  <string name="lbl_20_20">20\20</string>
  <string name="lbl_cancel">Cancel</string>
  <string name="lbl_nearset_driver">Nearset driver</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_access_location">Access Location</string>
  <string name="lbl_recently">Recently</string>
  <string name="lbl_track_ride">Track Ride</string>
  <string name="lbl_cardholder">Cardholder</string>
  <string name="msg_hussein_al_azam">Hussein Al-Azamat St., Amman</string>
  <string name="lbl_my_trips">My trips</string>
  <string name="lbl_from">From:</string>
  <string name="msg_1234_5678_9123">1234 5678 9123 4567</string>
  <string name="lbl_to">To:</string>
  <string name="msg_or_create_accou">or create account by email:</string>
  <string name="lbl_saved_location">Saved Location</string>
  <string name="lbl_save_changes">Save Changes</string>
  <string name="msg_don_t_have_acco">Don\u2019t have account?</string>
  <string name="lbl_123">123</string>
  <string name="lbl_17_30">17:30</string>
  <string name="lbl_try_again">Try Again</string>
  <string name="lbl_google">Google</string>
  <string name="msg_wed_august_19">Wed, August 19, 2020</string>
  <string name="lbl_my_rents">My Rents</string>
  <string name="lbl_ok_thanks">Ok, Thanks!</string>
  <string name="msg_request_a_ride">Request a ride picked by a nearby community renter.</string>
  <string name="msg_income_and_sale">Income and Sales Tax Department</string>
  <string name="msg_enter_card_numb">Enter card number</string>
  <string name="lbl_payment">Payment</string>
  <string name="msg_fri_august_21">Fri, August 21, 2020</string>
  <string name="msg_add_payment_met">Add payment method</string>
  <string name="lbl_schedule_trip">Schedule Trip</string>
  <string name="lbl_card_number">Card Number</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_2nd_st">2nd St</string>
  <string name="msg_check_your_curr">Check your current location and estimated time of arrival.</string>
  <string name="msg_sorry_there_s">Sorry, there\u2019s no taxi near you. Please try somwhere else. </string>
  <string name="msg_enter_destinati">Enter Destination</string>
  <string name="lbl_forget_password">Forget Password</string>
  <string name="lbl_my_profile">My Profile</string>
  <string name="lbl_write_review">Write review \u2026</string>
  <string name="msg_please_refreash">Please refreash the page to try again.</string>
  <string name="lbl_2_80_usd">2.80 USD</string>
  <string name="msg_8th_circle_amm">8th Circle, Amman</string>
  <string name="msg">**** **** **** 2451</string>
  <string name="lbl_make_default">Make default</string>
  <string name="msg_or_login_by_ema">or login by email:</string>
  <string name="lbl_meet_driver">Meet Driver</string>
  <string name="lbl_6_40_usd">6.40 USD</string>
  <string name="msg_enter_your_name">Enter your name as writtin on card</string>
  <string name="msg_current_locatio">Current location</string>
  <string name="lbl_confirm_trip">Confirm trip</string>
  <string name="lbl_kia_optima">KIA Optima</string>
  <string name="msg_please_turn_on">Please turn on your GPS to find out where you are.</string>
  <string name="lbl_create_account">Create Account</string>
  <string name="msg_recent_location">Recent locations:</string>
  <string name="lbl_4_8">4.8</string>
  <string name="msg_alpha_building">Alpha Building, 2nd Floor, Amman</string>
  <string name="lbl_8th_circle">8th Circle</string>
  <string name="msg_queen_alia_inte">Queen Alia International Airport</string>
  <string name="lbl_rate_your_trip">Rate your trip</string>
  <string name="lbl_4_min">4 min.</string>
  <string name="lbl_jerash_jordan">Jerash, Jordan</string>
  <string name="lbl_my_location">My Location</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="msg_need_your_locat">Need your location</string>
  <string name="lbl_facebook">Facebook</string>
  <string name="lbl_name">Name</string>
  <string name="lbl_connect_by">Connect by:</string>
  <string name="lbl_confirm_ride">Confirm Ride</string>
  <string name="msg_ford_fusion_202">Ford Fusion 2020</string>
  <string name="lbl_done">Done</string>
  <string name="lbl_save_card">Save Card</string>
  <string name="lbl_allen_gilbert">Allen Gilbert</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_tanya_robinson">Tanya Robinson</string>
  <string name="lbl_oct_09_2020">Oct 09, 2020</string>
  <string name="lbl_remove">Remove</string>
  <string name="lbl_remove_card">Remove Card</string>
  <string name="msg_all_saved_locat">All Saved Locations</string>
  <string name="lbl_saved_locations">Saved Locations</string>
  <string name="lbl_ford_fusion">Ford Fusion</string>
  <string name="lbl_hisham_zayadnh">Hisham Zayadnh</string>
  <string name="lbl_cash">Cash</string>
  <string name="lbl_verified">Verified</string>
  <string name="lbl_payment_method">Payment method</string>
  <string name="lbl_exp_date">Exp. Date</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_mawdoo3_com">Mawdoo3.com</string>
  <string name="lbl_no_internet">No internet!</string>
  <string name="msg_zayadnh13_gmail">zayadnh13@gmail.com</string>
  <string name="msg_the_driver_is_h">The driver is here, enjoy your trip.</string>
  <string name="msg_1234_5678_912">1234  5678  9123  4567</string>
  <string name="msg_queen_rania_st">Queen Rania St,. Amman</string>
  <string name="lbl_02_23">02/23</string>
  <string name="lbl_payments">Payments</string>
  <string name="lbl_mobile_number">Mobile Number</string>
  <string name="msg_962_7_9068_848">+962 7 9068 8482</string>
  <string name="msg_enter_your_emai">Enter your email</string>
  <string name="lbl_welcome_back">Welcome Back</string>
  <string name="lbl_17_00">17:00</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_16_30">16:30</string>
  <string name="lbl_request_ride">Request Ride</string>
  <string name="lbl_4_50_usd">4.50 USD</string>
  <string name="lbl_cvv_cvc">cvv\cvc</string>
  <string name="lbl_enter_your_name">Enter your name</string>
  <string name="msg_are_you_sure_to">Are you sure to remove
this card?</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_nu">Please enter valid number</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
