<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="imageSliderSlidershapeThreeModel" type="com.hive.app.modules.paymentcardoptions.data.model.ImageSliderSlidershapeThreeModel"/>
    </data>
    <LinearLayout android:id="@+id/linearCard02"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_300pxh"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylecornerRadius">
        <ImageView android:id="@+id/imageShapeThree"
            android:layout_gravity="end"
            android:layout_height="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="@dimen/_32pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_shape_white_a700_10x32"
            imageUrl="@{imageSliderSlidershapeThreeModel.imageShapeThree}"
            placeHolder="@{@drawable/img_shape_white_a700_10x32}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_shape_white_a700_10x32"/>
        <FrameLayout android:id="@+id/frameStacktanyarobinson"
            android:layout_gravity="end"
            android:layout_height="@dimen/_132pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_265pxh">
            <FrameLayout android:id="@+id/frameStackshapeFour"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_119pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_183pxh">
                <ImageView android:id="@+id/imageShapeFour"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_119pxh"
                    android:layout_width="@dimen/_183pxh"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_10pxh}"
                    imageUrl="@{imageSliderSlidershapeThreeModel.imageShapeFour}"
                    placeHolder="@{@drawable/image_not_found}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_shape_white_a700_119x183"/>
                <LinearLayout android:id="@+id/linearColumnexpdate"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_52pxh"
                    android:layout_marginStart="@dimen/_52pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtExpDate"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{imageSliderSlidershapeThreeModel.txtExpDate}"
                        style="@style/txtPoppinsregular10" tools:text="@string/lbl_exp_date"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txt0223"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{imageSliderSlidershapeThreeModel.txt0223}"
                        style="@style/txtPoppinssemibold12" tools:text="@string/lbl_02_23"/>
                </LinearLayout>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTanyaRobinson"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{imageSliderSlidershapeThreeModel.txtTanyaRobinson}"
                style="@style/txtPoppinssemibold12" tools:text="@string/lbl_tanya_robinson"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCardholder"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_39pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{imageSliderSlidershapeThreeModel.txtCardholder}"
                style="@style/txtPoppinsregular10" tools:text="@string/lbl_cardholder"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtLanguage"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_36pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{imageSliderSlidershapeThreeModel.txtLanguage}"
                style="@style/txtPoppinsregular16" tools:text="@string/msg_1234_5678_912"/>
            <ImageView android:id="@+id/imageRectangle"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_26pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_rectangle"
                imageUrl="@{imageSliderSlidershapeThreeModel.imageRectangle}"
                placeHolder="@{@drawable/img_rectangle}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle"/>
        </FrameLayout>
    </LinearLayout>
</layout>
