<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="tripRatingVM" type="com.hive.app.modules.triprating.data.viewmodel.TripRatingVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearTripRating"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearRatingPopup"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_152pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_3">
            <EditText
                android:drawableEnd="@drawable/img_path_bluegray_900_13x13"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_rate_your_trip"
                android:id="@+id/etGroupEightyFive"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_21pxh"
                android:paddingStart="@dimen/_30pxh"
                android:singleLine="true"
                android:text="@={tripRatingVM.tripRatingModel.etGroupEightyFiveValue}"
                android:textColorHint="@color/bluegray_900"
                style="@style/etPoppinssemibold16" tools:ignore="Autofill"/>
            <ImageView android:id="@+id/imageProfilePicture"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_80pxh"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="@dimen/_80pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_profilepicture_50x50}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_profilepicture_50x50"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAllenGilbert"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{tripRatingVM.tripRatingModel.txtAllenGilbert}"
                style="@style/txtPoppinsregular16_1" tools:text="@string/lbl_allen_gilbert"/>
            <FrameLayout android:id="@+id/frameStackratingstars"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_64pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="@dimen/_283pxh" style="@style/groupStylewhite_6">
                <ImageView android:id="@+id/imageRatingStars"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_marginBottom="@dimen/_21pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="@dimen/_182pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_ratingstars"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ratingstars"/>
            </FrameLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearReview"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_6">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtWritereview"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_116pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{tripRatingVM.tripRatingModel.txtWritereview}"
                    style="@style/txtPoppinsregular12" tools:text="@string/lbl_write_review"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnDone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_done"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_done"/>
        </LinearLayout>
    </LinearLayout>
</layout>
