<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="meetDriverVM" type="com.hive.app.modules.meetdriver.data.viewmodel.MeetDriverVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearMeetDriver"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearColumnmeetdriver"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_212pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_3">
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowmeetdriver"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMeetDriver"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.88"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{meetDriverVM.meetDriverModel.txtMeetDriver}"
                    style="@style/txtPoppinssemibold16" tools:text="@string/lbl_meet_driver"/>
                <ImageView android:id="@+id/imagePath"
                    android:layout_height="@dimen/_13pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_76pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_path_bluegray_900_13x13"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_path_bluegray_900_13x13"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageDriverillustra"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_156pxh"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="@dimen/_235pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_driverillustra"
                tools:ignore="ContentDescription" tools:src="@drawable/img_driverillustra"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtThedriverish"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{meetDriverVM.meetDriverModel.txtThedriverish}"
                style="@style/txtPoppinsregular14_3" tools:text="@string/msg_the_driver_is_h"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnOkThanks"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_ok_thanks"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_ok_thanks"/>
        </LinearLayout>
    </LinearLayout>
</layout>
